fix(console): align notification button better in menu

--- a/gravitee-apim-console-webui/src/components/gio-notification-menu/gio-notification-menu.component.scss
+++ b/gravitee-apim-console-webui/src/components/gio-notification-menu/gio-notification-menu.component.scss
@@ -15,6 +15,10 @@
  */
 @use 'sass:map';
 
+:host {
+  display: inline-flex;
+}
+
 .gio-notification-menu {
   width: 450px;
 
